--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ form {
   max-width: 500px;
   min-width: 300px;
   width: 60vw;
+  padding-bottom: 2em;a
 }
 
 fieldset {
@@ -39,10 +40,37 @@ fieldset:last-of-type { /*selects the last fieldset element, and removes its bot
 input, textarea, select { 
   width: 100%;
   margin: 10px 0 0 0;
+  min-height: 2em;
 }
 
 .inline {
   width: unset;
   margin: 0 0.5em 0 0;
   vertical-align: middle;
+}
+
+input, textarea {
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
+  color: #ffffff;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
+  margin: 1em auto 1em auto;
+  min-width: 300px;
+}
+
+input[type="submit"] {
+  padding: 1px 2px;
+}
+
+a {
+  color: #dfdfe2;
 }
